Almost finished with desktop version. Just need to fix glasses text box alignment.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 html {
   font-size: 18px;
   color: white;
+  font-family: Helvetica;
 }
 
 header {
@@ -11,14 +12,14 @@ header {
 .logo {
   display: flex;
   align-items: center;
-  padding: 1rem 0.5rem;
-  max-width: 960px;
+  width: 960px;
   margin: 0 auto;
+
 }
 
 .logo img {
   height: 1.5rem;
-  padding-right: 0.5rem;
+  padding: 1rem 0.5rem;
 }
 
 .logo span {
@@ -28,12 +29,11 @@ header {
 }
 
 .highlight {
-  display: flex;
-  justify-content: center;
   height: 25rem;
   background-image: url(../../resources/images/moto.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .article-title-container {
@@ -85,48 +85,53 @@ header {
 .items {
   display: flex;
   justify-content: space-between;
-  margin: 3rem 0px 0px;
+  margin: 3rem 0;
 }
 
 .item {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  width: 30%;
+  border: 4px solid black;
 }
 
 .item-img {
-  height: 9rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-width: 4px;
-  border-style: solid;
-  border-color: black;
-  border-image: initial;
-  padding: 2rem 0px;
-  max-width: 8rem;
+  padding: 2rem 0;
+  max-height: 9rem;
+  max-width: 60%;
+}
+
+.item-img img {
+  max-height: 9rem;
+  max-width: 100%;
+}
+
+.item-img .glasses {
+
 }
 
 .item span {
-  display: block;
   background-color: black;
   color: white;
   text-align: center;
   padding: 0.5rem;
-  max-width: 8rem;
+  width: 95%;
 }
 
 .business-info {
-  max-width: 960px;
-  margin: 0px auto;
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4rem;
 }
 
 .shop-details {
   display: flex;
   justify-content: space-between;
-  margin: 3rem 0px 0px;
 }
-
 
 .info {
   width: 35%;
@@ -136,84 +141,26 @@ header {
   display: block;
   background-color: black;
   color: white;
-  padding: 1em 2em;
+  padding: 1rem 2rem;
+  max-width: 100%;
 }
 
+.info .detail-content {
+  color: black;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*.main-content {
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: black;
+  height: 5rem;
 }
 
-.items {
+.copyright {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: center;
   width: 960px;
-}
-
-.pen {
-  border: 4px solid black;
-  margin-top: 3rem;
-  width: 30%
-}
-
-.watch {
-  border: 4px solid black;
-  margin-top: 3rem;
-  width: 30%
-}
-
-.glasses {
-  border: 4px solid black;
-  margin-top: 3rem;
-  width: 30%;
-}
-
-.pen .white-text {
-  background-color: black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.watch .white-text {
-  background-color: black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.glasses .white-text {
-  background-color: black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.pen .item-img {
-  height: 9rem;
-  margin: 2rem;
+  height: 5rem;
 }
